--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Script\Resolution.cs" />
     <Compile Include="Assets\Script\SetColor.cs" />
     <Compile Include="Assets\Script\Shadow.cs" />
+    <Compile Include="Assets\Script\slaim_move.cs" />
     <Compile Include="Assets\Script\TriggerChildBlock.cs" />
     <Compile Include="Assets\Script\TriggerCodePanel.cs" />
     <Reference Include="Unity.Timeline.Editor">
