sprite 추가 및 수정, 카메라 이동 구현
구름 추가, 메뉴 패널 이미지 추가, 카메라 이동 구현

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Script\Compiler.cs" />
     <Compile Include="Assets\Script\Controller.cs" />
     <Compile Include="Assets\Script\DragDrop.cs" />
+    <Compile Include="Assets\Script\follow_object.cs" />
     <Compile Include="Assets\Script\MenuButton.cs" />
     <Compile Include="Assets\Script\NextScene.cs" />
     <Compile Include="Assets\Script\Resolution.cs" />
